--- a/flappybird/src/App.css
+++ b/flappybird/src/App.css
@@ -26,3 +26,12 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+#faking canvas{
+  border: 1px solid #000;
+  height: 480px;
+  width: 320px;
+  overflow: hidden;
+  position: relative;
+  background-color: #70c5cf
+}
